Change item_view layout

--- a/recyclerviewtest/src/main/AndroidManifest.xml
+++ b/recyclerviewtest/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".ListViewActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".GirdViewActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
