Add RecyclerView multi-item-layout test project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':bottomnavigationviewtest', ':recyclerviewtest'
+include ':app', ':bottomnavigationviewtest', ':recyclerviewtest', ':recyclerviewtest2'
