--- a/recyclerviewtest2/build.gradle
+++ b/recyclerviewtest2/build.gradle
@@ -33,4 +33,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //图片轮播
+    implementation 'com.youth.banner:banner:1.4.10'
+    //注解id
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //列表
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //加载图片
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
 }
