--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':bottomnavigationviewtest', ':recyclerviewtest', ':recyclerviewtest2'
+include ':app', ':bottomnavigationviewtest', ':recyclerviewtest', ':recyclerviewtest2', ':recyclerviewtest3'
